add a click event

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 {{ hellowWorld + " - " + title }}
+<hr />
+<button (click)="incrementClicked()">Click me</button>
+{{ "This button was clicked " + clicked + " times" }}
 
 <app-users></app-users>
