--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,17 @@
 .spaced {
   margin: 15px;
 }
+
+.block-of-color {
+  background-color: blue;
+  width: 300px;
+  height: 300px;
+}
+
+.context-menu {
+  position: absolute;
+  border: 1px solid black;
+  background-color: rgb(209, 206, 206);
+  overflow-wrap: break-word;
+  width: 4rem;
+}
