--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,19 @@
   </div>
 </div>
 
+<div
+  class="block-of-color"
+  (contextmenu)="toggleContextMenu(true, $event)"
+></div>
+<div
+  *ngIf="contextMenuInfo.willContextMenuShow"
+  class="context-menu"
+  [style.left.px]="contextMenuInfo.pageX"
+  [style.top.px]="contextMenuInfo.pageY"
+>
+  This is the contextmenu
+</div>
+
 <div class="spaced">
   <app-users></app-users>
 </div>
