ngstyle and ngclass

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,5 +13,11 @@
   border: 1px solid black;
   background-color: rgb(209, 206, 206);
   overflow-wrap: break-word;
-  width: 4rem;
+  padding: 10px;
+  width: 100px;
+}
+
+.tooltip-color {
+  background-color: purple;
+  cursor: pointer;
 }
