parent to child input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="spaced">
+<!-- <div class="spaced">
   {{ hellowWorld + " - " + title }}
 </div>
 <hr />
@@ -7,7 +7,6 @@
   {{ "This button was clicked " + clicked + " times" }}
   <div *ngIf="clicked > 5">You have clicked more then 5 times</div>
   <br />
-  <!-- <input type="text" [value]="clicked" /> -->
   <input type="number" [(ngModel)]="clicked" />
 </div>
 <div class="spaced">
@@ -51,7 +50,7 @@
   [style.top.px]="tooltipInfo.pageY + 15"
 >
   This is the tooltip
-</div>
+</div> -->
 
 <div class="spaced">
   <app-users></app-users>
