--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,6 +1,10 @@
 <h1>Users</h1>
 <ol>
   <li *ngFor="let user of userList; let i = index">
-    <app-user-single [user]="user"></app-user-single>
+    <app-user-single
+      [user]="user"
+      [index]="i"
+      (deleteUser)="deleteUser($event)"
+    ></app-user-single>
   </li>
 </ol>
