--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,8 +1,7 @@
 <h1>Users</h1>
 <ol>
-  <li *ngFor="let user of userList; let i = index">
+  <li *ngFor="let user of userService.userList; let i = index">
     <app-user-single
-      [user]="user"
       [index]="i"
       (deleteUser)="deleteUser($event)"
     ></app-user-single>
