more logic into the servce

--- a/src/app/users/user-single/user-single.component.html
+++ b/src/app/users/user-single/user-single.component.html
@@ -1,3 +1,3 @@
 {{ userService.userList[index] }}
 
-<button (click)="deleteUser.emit(index)">Delete</button>
+<button (click)="userService.deleteUser(index)">Delete</button>
