--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,9 +1,6 @@
 <h1>Users</h1>
 <ol>
   <li *ngFor="let user of userService.userList; let i = index">
-    <app-user-single
-      [index]="i"
-      (deleteUser)="deleteUser($event)"
-    ></app-user-single>
+    <app-user-single [index]="i"></app-user-single>
   </li>
 </ol>
